wip: add rest api, other cleanup